улучшение локализации культур, изменение окончаний

--- a/localization/russian/culture/new_cultures_l_russian.yml
+++ b/localization/russian/culture/new_cultures_l_russian.yml
@@ -65,12 +65,12 @@
  angle:0 "Англы" 
  angle_prefix:0 "Англо" 
  angle_collective_noun:0 "Англск" 
- frisian:0 "Фризы" 
- frisian_prefix:0 "Фризо" 
- frisian_collective_noun:1 "Фризск" 
+ frisian:0 "Фризаны" 
+ frisian_prefix:0 "Фризано" 
+ frisian_collective_noun:1 "Фризанск" 
  frisa:0 "Фризы" 
  frisa_prefix:0 "Фризо" 
- frisa_collective_noun:1 "Фризийск" 
+ frisa_collective_noun:1 "Фризск" 
  dutch:2 "Голландцы " 
  dutch_prefix:2 "Батаво" 
  dutch_collective_noun:2 "Голландск" 
@@ -196,9 +196,9 @@
  burgundian_prefix:0 "Бургундо" 
  burgundian_collective_noun:0 "Бургундск" 
 
- alamannic:0 "Аламанны" 
- alamannic_prefix:0 "Аламано" 
- alamannic_collective_noun:0 "Аламанск" 
+ alamannic:0 "Алеманны" 
+ alamannic_prefix:0 "Алемано" 
+ alamannic_collective_noun:0 "Алеманск" 
 
  vandal:0 "Вандалы" 
  vandal_prefix:0 "Вандало" 
@@ -698,28 +698,28 @@
 
  heritage_semitic_name:0 "Семитское" 
  #History loc 
- hispano_roman_history_loc:0 "Сформирована из [CULTURE.GetName] и нескольких культур кельтиберского [Concept( 'heritage', 'наследия' )|E] в 220 году до Рождества Христова" 
- gallo_roman_history_loc:0 "Сформирована из [CULTURE.GetName] и [TARGET_CULTURE.GetName] в 58 году до Рождества Христова" 
- afro_roman_history_loc:0 "Сформирована из [CULTURE.GetName] и [TARGET_CULTURE.GetName] в 146 году до Рождества Христова" 
- russian_history_loc:0 "Сформирована из [CULTURE.GetName] и нескольких культур восточно-славянского [Concept( 'heritage', 'наследия' )|E] в году [DATE.GetYear]" 
- anglo_saxon_history_loc:0 "Сформирована из [CULTURE.GetName] и [TARGET_CULTURE.GetName] в году [DATE.GetYear]" 
+ hispano_roman_history_loc:0 "Сформирована из #L[CULTURE.GetCollectiveNoun]ой#! и культур кельтиберского [Concept( 'heritage', 'наследия' )|E] в 220 году до Р.Х." 
+ gallo_roman_history_loc:0 "Сформирована из #L[CULTURE.GetCollectiveNoun]ой#! и #L[TARGET_CULTURE.GetCollectiveNoun]ой#! в 58 году до Рождества Христова" 
+ afro_roman_history_loc:0 "Сформирована из #L[CULTURE.GetCollectiveNoun]ой#! и #L[TARGET_CULTURE.GetCollectiveNoun]ой#! в 146 году до Рождества Христова" 
+ russian_history_loc:0 "Сформирована из #L[CULTURE.GetCollectiveNoun]ой#! и нескольких культур восточно-славянского [Concept( 'heritage', 'наследия' )|E] в году [DATE.GetYear]" 
+ anglo_saxon_history_loc:0 "Сформирована из #L[CULTURE.GetCollectiveNoun]ой#! и #L[TARGET_CULTURE.GetCollectiveNoun]ой#! в году [DATE.GetYear]" 
  iranian_hun_history_loc:0 "Сформирована из различных культур иранского и тюркского [Concept( 'heritage', 'наследия' )|E] в году [DATE.GetYear]" 
- tuyuhun_history_loc:0 "Выходцы из [CULTURE.GetName] поселившиеся на озере Цинхай в году  [DATE.GetYear]" 
- iranian_shaka_history_loc:0 "Сформирована из [CULTURE.GetName] и [TARGET_CULTURE.GetName] приблизительно в 150 году от Рождества Христова" 
+ tuyuhun_history_loc:0 "Выходцы из #L[CULTURE.GetCollectiveNoun]ой#! поселившиеся на озере Цинхай в году  [DATE.GetYear]" 
+ iranian_shaka_history_loc:0 "Сформирована из #L[CULTURE.GetCollectiveNoun]ой#! и [TARGET_CULTURE.GetCollectiveNoun]ой#! приблизительно в 150 году от Рождества Христова" 
  yuezhi_history_loc:0 "Сформирована из индоевропейских кочевников под влиянием иранцев и элиннов в 176 году до Рождества Христова" # Date when Yuezhi split after their defeat by the Xiongnu 
- punic_history_loc:0 "Откололась от [CULTURE.GetName] приблизительно в 800 году до Рождества Христова" 
- xianbei_history_loc:0 "Сформирована из остатков [CULTURE.GetName] после поражения от Сюнну в 208 году до Рождества Христова" 
- rouran_history_loc:0 "Сформирована из остатков [CULTURE.GetName] и [TARGET_CULTURE.GetName] около 200 года от Рождества Христова" 
- kangju_history_loc:0 "Сформирована из иранских кочевников под руководством культуры [TARGET_CULTURE.GetName] в году 200 до Рождества Христова" 
- rhaetian_history_loc:0 "Откололась от [CULTURE.GetName] приблизительно в году 500 до Рождества Христова" 
- xiao_yuezhi_history_loc:0 "Сформирована из беженцев [CULTURE.GetName] которые искали убежища у [TARGET_CULTURE.GetName] в году 176 до Рождества Христова" 
- elymaean_history_loc:0 "Происходят от остатков нео-[CULTURE.GetName] под персидским правлением в первом тысячелетии до Рождества Христова" 
- nabatean_history_loc:0 "Сформирована из племен [CULTURE.GetName] под влиянием [TARGET_CULTURE.GetName] в первом тысячелетии до Рождества Христова" 
- arran_history_loc:0 "Сформирована из [CULTURE.GetName] и нескольких других культур калказского  [Concept( 'heritage', 'наследия' )|E]"
- western_suebi_history_loc:0 "Откололась от [CULTURE.GetName] после создания сообственного королевства" 
- pontic_history_loc:0 "Сформирована из [CULTURE.GetCollectiveNoun] и [TARGET_CULTURE.GetCollectiveNoun] правящих анатолийцами в первом тысячелетии до Рождества Христова" 
- syrian_history_loc:0 "Сформирована из [CULTURE.GetName] и [TARGET_CULTURE.GetName] в году 332 до Рождества Христова" 
- aegyptian_history_loc:0 "Сформирована из [CULTURE.GetName] и [TARGET_CULTURE.GetName] в году 332 до Рождества Христова" 
- galatian_history_loc:0 "Сформирована из [CULTURE.GetName] и [TARGET_CULTURE.GetName] в году 275 до Рождества Христова" 
- sardinian_history_loc:0 "Сформирована из [CULTURE.GetName] и [TARGET_CULTURE.GetName] в году 238 до Рождества Христова" 
- roman_rhaetian_history_loc:0 "Сформирована из [CULTURE.GetName] и [TARGET_CULTURE.GetName] в году 15 до Рождества Христова 
+ punic_history_loc:0 "Откололась от #L[CULTURE.GetCollectiveNoun]ой#! приблизительно в 800 году до Рождества Христова" 
+ xianbei_history_loc:0 "Сформирована из остатков #L[CULTURE.GetCollectiveNoun]ой#! после поражения от Сюнну в 208 году до Рождества Христова" 
+ rouran_history_loc:0 "Сформирована из остатков #L[CULTURE.GetCollectiveNoun]ой#! и [TARGET_CULTURE.GetCollectiveNoun]ой#! около 200 года от Рождества Христова" 
+ kangju_history_loc:0 "Сформирована из иранских кочевников под руководством культуры #L[TARGET_CULTURE.GetCollectiveNoun]ой#! в году 200 до Рождества Христова" 
+ rhaetian_history_loc:0 "Откололась от #L[CULTURE.GetCollectiveNoun]ой#! приблизительно в году 500 до Рождества Христова" 
+ xiao_yuezhi_history_loc:0 "Сформирована из беженцев #L[CULTURE.GetCollectiveNoun]ой#! которые искали убежища у #L[TARGET_CULTURE.GetCollectiveNoun]ой#! в году 176 до Рождества Христова" 
+ elymaean_history_loc:0 "Происходят от остатков нео-#L[CULTURE.GetCollectiveNoun]ой#! под персидским правлением в первом тысячелетии до Рождества Христова" 
+ nabatean_history_loc:0 "Сформирована из племен #L[CULTURE.GetCollectiveNoun]ой#! под влиянием [TARGET_CULTURE.GetCollectiveNoun]ой#! в первом тысячелетии до Рождества Христова" 
+ arran_history_loc:0 "Сформирована из #L[CULTURE.GetCollectiveNoun]ой#! и нескольких других культур калказского [Concept( 'heritage', 'наследия' )|E]"
+ western_suebi_history_loc:0 "Откололась от #L[CULTURE.GetCollectiveNoun]ой#! после создания сообственного королевства" 
+ pontic_history_loc:0 "Сформирована из #L[CULTURE.GetCollectiveNoun]ой#! и #L[TARGET_CULTURE.GetCollectiveNoun]ой#! правящих анатолийцами в первом тысячелетии до Рождества Христова" 
+ syrian_history_loc:0 "Сформирована из #L[CULTURE.GetCollectiveNoun]ой#! и #L[TARGET_CULTURE.GetCollectiveNoun]ой#! в году 332 до Рождества Христова" 
+ aegyptian_history_loc:0 "Сформирована из #L[CULTURE.GetCollectiveNoun]ой#!#L и #L[TARGET_CULTURE.GetCollectiveNoun]ой#! в году 332 до Рождества Христова" 
+ galatian_history_loc:0 "Сформирована из #L[CULTURE.GetCollectiveNoun]ой#! и #L[TARGET_CULTURE.GetCollectiveNoun]ой#! в году 275 до Рождества Христова" 
+ sardinian_history_loc:0 "Сформирована из #L[CULTURE.GetCollectiveNoun]ой#! и #L[TARGET_CULTURE.GetCollectiveNoun]ой#! в году 238 до Рождества Христова" 
+ roman_rhaetian_history_loc:0 "Сформирована из #L[CULTURE.GetCollectiveNoun]ой#! и #L[TARGET_CULTURE.GetCollectiveNoun]ой#! в году 15 до Рождества Христова 
