--- a/localization/russian/culture/new_cultures_l_russian.yml
+++ b/localization/russian/culture/new_cultures_l_russian.yml
@@ -44,8 +44,8 @@
  gautish_prefix:0 "Гёто" 
  gautish_collective_noun:1 "Гётск" 
  gutish:0 "Гуты" 
- gutish_prefix:0 "Гутно" 
- gutish_collective_noun:0 "Гутнийск" 
+ gutish_prefix:0 "Гуто" 
+ gutish_collective_noun:0 "Гутийск" 
  meitei:0 "Манипури" 
  meitei_prefix:0 "Манипуро" 
  meitei_collective_noun:0 "Манипурск" 
