--- a/localization/russian/bookmark/bm_361_eastern_huns_l_russian.yml
+++ b/localization/russian/bookmark/bm_361_eastern_huns_l_russian.yml
@@ -1,40 +1,40 @@
 ﻿l_russian:
- bm_361_eastern_huns:0 "Arrival of the Eastern Huns" #NT!
- bm_361_eastern_huns_desc:1 "The Kushan realm that once stretched across the Silk Road, and stood proudly alongside Rome, Persia, India, and China as one of the great empires of antiquity, is no more. In its wake, new peoples fill in the power vacuum.\n\nForemost of these peoples are the Iranian or Eastern Huns, also known in India as the Hunas, who consist of several groups like the Xionites and Hephthalites. They now occupy many lands formerly ruled by the Kushans, and conflict between them and the established powers in Persia, India, and Central Asia over the riches and trade routes of the Silk Road is inevitable." #NT!
+ bm_361_eastern_huns:0 "Прибытие восточных гуннов" 
+ bm_361_eastern_huns_desc:1 "Кушанское царство, которое когда-то простиралось через Шелковый путь и гордо стояло рядом с Римом, Персией, Индией и Китаем как одна из великих империй древности, больше нет. В результате новые люди заполняют вакуум власти.\n\nГлавными из этих народов являются иранцы или восточные гунны, также известные в Индии как гунны, которые состоят из нескольких групп, таких как хиониты и эфталиты. Теперь они занимают многие земли, ранее принадлежавшие кушанам, и конфликт между ними и установленными властями в Персии, Индии и Центральной Азии из-за богатств и торговых путей Шелкового пути неизбежен." 
 
 
- # Kidarites / Kidara #NT!
+ # Кидариты / Кидара 
 
- bookmark_eastern_huns_kidara:0 "King Kidara" #NT!
- bookmark_eastern_huns_kidara_desc:0 "Kidara is the first major ruler of the Kidarite Huns, who were named after him. Following the Kushans' decline, he founded the Kidarite Empire in the old Kushan territories of Tokharistan and Gandhara. By claiming the title of #italic Kushanshah#!, he effectively declared himself the official successor of the once mighty Kushans.\n\n#bold The Kidarites were the first of several major waves of Hunnic invasions into Persia and India. How will you set an example for the rest to follow?" #NT!
+ bookmark_eastern_huns_kidara:0 "Король Кидара" 
+ bookmark_eastern_huns_kidara_desc:0 "Кидара - первый крупный правитель кидаритских гуннов, названных в его честь. После упадка кушанов он основал Кидаритскую империю на старых кушанских территориях Тохаристана и Гандхары. Претендуя на звание #italic Kushanshah#!, он фактически объявил себя официальным преемником некогда могущественных кушанов.\n\n#bold Кидариты были первой из нескольких крупных волн гуннских вторжений в Персию и Индию. Как вы будете подавать пример остальным?" 
 
- # Kushans / Kipunada #NT!
+ # Кушаны / Кипунада 
 
- bookmark_eastern_huns_kipunada:0 "King Kipunada" #NT!
- bookmark_eastern_huns_kipunada_desc:0 "If Kipunada's ancestors could see the pitiful rump state he rules, they would surely weep. As the last attested Kushan ruler, he was a far cry from his illustrious forebears: a mere petty warlord, ruling a few territories around Taxila, he was subservient to the Guptas and had little power.\n\n#bold Kipunada may have been the last Kushan ruler in history, but it doesn't have to be that way. Can you overcome the odds and restore the Kushans to their former glory?" #NT!
+ bookmark_eastern_huns_kipunada:0 "Король Кипунада" 
+ bookmark_eastern_huns_kipunada_desc:0 "Если бы предки Кипунады увидели бы жалкое государство, которым он правит, они бы, конечно, заплакали. Как последний засвидетельствованный кушанский правитель, он был далек от своих прославленных предков: простой мелкий военачальник, правивший несколькими территориями вокруг Таксилы, он подчинялся Гуптам и имел небольшую власть.\n\n#bold Кипунада, возможно, был последним кушанским правителем в истории, но так быть не должно. Сможете ли вы преодолеть трудности и вернуть кушанам былую славу?" 
 
- # Sassanids / Shapur II #NT!
+ # Сасаниды / Шапур II 
 
- bookmark_eastern_huns_shapur:0 "Shahanshah Shapur II 'The Great'" #NT!
- bookmark_eastern_huns_shapur_desc:0 "According to legend, Shapur II was the only monarch in history to be crowned #italic in utero#!. During his 70-year reign, he expanded Sassanid power to even greater heights, waging successful wars against the Romans, Indians, and Arabs. However, the Eastern Huns may prove to be one of his greatest foes yet.\n\n#bold As he enters his twilight years, Shapur II surely worries about what will happen to his empire after he passes away. Will his heirs resist the rising tide of the Huns?" #NT!
- bookmark_eastern_huns_ardashir:0 "Ardashir II" #NT!
- bookmark_eastern_huns_shapur_3:0 "Shapur III" #NT!
+ bookmark_eastern_huns_shapur:0 "Шаханшах Шапур II Великий" 
+ bookmark_eastern_huns_shapur_desc:0 "Согласно легенде, Шапур II был единственным монархом в истории, который был коронован. #italic in utero#!. Во время своего 70-летнего правления он расширил власть Сасанидов до еще больших высот, ведя успешные войны против римлян, индийцев и арабов. Однако восточные гунны могут оказаться одними из его злейших врагов.\n\n#bold Вступая в свои сумеречные годы, Шапур II, несомненно, беспокоится о том, что будет с его империей после его смерти. Смогут ли его наследники противостоять растущему потоку гуннов?" 
+ bookmark_eastern_huns_ardashir:0 "Ардашир II" 
+ bookmark_eastern_huns_shapur_3:0 "Шапур III" 
 
- # Guptas / Samudragupta #NT!
+ # Гупты / Самудрагупта 
 
- bookmark_eastern_huns_samudragupta:0 "Samrat Samudragupta" #NT!
- bookmark_eastern_huns_samudragupta_desc:0 "The second Emperor of the Guptas, Samudragupta, had a remarkable career that saw the expansion of Gupta power in every direction across India. Never since the days of the Mauryas was there such a splendorous, mighty empire in India. After his death, the Gupta empire would continue to grow and reach its zenith under his son, Chadragupta II.\n\n#bold The Guptas are in the ascendancy. Can you follow their historical path to supremacy across India, halt the Hunas menace, and bring wealth and prosperity to the subcontinent?" #NT!
- bookmark_eastern_huns_ramagupta:0 "Ramagupta" #NT!
- bookmark_eastern_huns_chandragupta:0 "Chadragupta II" #NT!
+ bookmark_eastern_huns_samudragupta:0 "Самрат Самудрагупта" 
+ bookmark_eastern_huns_samudragupta_desc:0 "У второго императора Гуптов, Самудрагупты, была замечательная карьера, в ходе которой власть Гуптов распространялась по всей Индии во всех направлениях. Никогда еще со времен Маурьев не было в Индии такой великолепной и могущественной империи. После его смерти империя Гупта продолжала расти и достигла своего апогея при его сыне Чадрагупте II.\n\n#bold Гупты находятся на подъеме. Сможете ли вы пройти их исторический путь к господству над Индией, остановить угрозу Хуна и принести богатство и процветание на субконтинент?" 
+ bookmark_eastern_huns_ramagupta:0 "Рамагупта" 
+ bookmark_eastern_huns_chandragupta:0 "Чандрагупта II" 
 
- # Afrighids / Bagra #NT!
+ # Афригиды / Багра 
 
- bookmark_eastern_huns_bagra:0 "Khwarezmshah Bagra" #NT!
- bookmark_eastern_huns_bagra_desc:0 "Bagra was the second king of the Afrighids, who ruled Khwarezm for over nine hundred years. For centuries, from their mighty #italic kala#! fortresses along the Oxus river, they stubbornly survived attack after attack from the Huns, Sassanids, Turks, and Arabs, which speaks volumes about their resilience.\n\n#bold In the precarious borderlands of the Iranian frontier, what opportunities await you along the Silk Road?" #NT!
+ bookmark_eastern_huns_bagra:0 "Хорезмшах Багра" 
+ bookmark_eastern_huns_bagra_desc:0 "Багра был вторым царем афригидов, правившим Хорезмом более девятисот лет. Веками от их могучего #italic kala#! крепостей вдоль реки Оксус они упорно выдерживали нападения за нападениями со стороны гуннов, сасанидов, тюрков и арабов, что говорит об их стойкости.\n\n#bold Какие возможности ждут вас на Шелковом пути в ненадежных приграничных районах Ирана?" 
 
- # Chach / Zirt #NT!
+ # Чач / Зирт 
 
- bookmark_eastern_huns_zirt:0 "High Chieftain Zirt" #NT!
- bookmark_eastern_huns_zirt_desc:0 "Though the Kidarites were the first major Eastern Hun power, there were also other Hun warlords across Central Asia, like Zirt, who ruled over a motley mix of Xionites, Sogdians, and Yuezhi remnants along the Syr Darya river. Hun chieftains like Zirt played a role in the ever-changing, dynamic politics of the region's nasceant Hunnic tribes.\n\n#bold Zirt would fade into obscurity, remembered only thanks to numismatist scholars who discovered his decrepit coinage. Can you instead make him a ruler who will be remembered for generations?" #NT!
+ bookmark_eastern_huns_zirt:0 "Верховный вождь Зирт" 
+ bookmark_eastern_huns_zirt_desc:0 "Хотя кидариты были первой крупной силой восточных гуннов, в Центральной Азии были и другие гуннские военачальники, такие как Зирт, который правил пестрой смесью хионитов, согдийцев и остатков юэчжи вдоль реки Сырдарья. Вожди гуннов, такие как Зирт, играли роль в постоянно меняющейся, динамичной политике зарождающихся гуннских племен региона.\n\n#bold Зирт канул в безвестность, о нем вспомнили только благодаря ученым-нумизматам, обнаружившим его ветхую чеканку. Можете ли вы вместо этого сделать его правителем, которого будут помнить поколения?" 
 
 
