--- a/localization/russian/bookmark/start_years_l_russian.yml
+++ b/localization/russian/bookmark/start_years_l_russian.yml
@@ -1,7 +1,7 @@
 ﻿l_russian:
- bm_group_361:0 "361" #NT!
- bm_group_395:0 "395" #NT!
- bm_group_476:0 "476" #NT!
- bm_group_532:0 "532" #NT!
- bm_group_632:0 "632" #NT!
- bm_group_768:0 "768" #NT!
+ bm_group_361:0 "361" 
+ bm_group_395:0 "395" 
+ bm_group_476:0 "476" 
+ bm_group_532:0 "532" 
+ bm_group_632:0 "632" 
+ bm_group_768:0 "768" 
