--- a/localization/russian/bookmark/bm_395_middle_east_l_russian.yml
+++ b/localization/russian/bookmark/bm_395_middle_east_l_russian.yml
@@ -1,42 +1,42 @@
 ﻿l_russian:
- bm_395_middle_east:0 "The House of Sassan" #NT!
- bm_395_middle_east_desc:1 "For centuries, the Romans and Iranians have fought one another for supremacy over the Near East. Now, the Eastern Roman Empire and the House of Sassan find themselves at odds over the region once again.\n\nThe Sassanids have long sought to restore the former might of Persia under the Achaemenids, and have successfully brought peoples like the Lakhmids and the Armenians under their fold. The Eastern Romans followed suit in establishing the Tanukhids and Jafnids as tributary states, and now set their eyes on the independent kingdoms of the Caucasus Mountains. Another contender in the region, the Axumites, look to dominate Himyar along the opposite shores of the Red Sea.\n\n#bold The riches of the Near East have brought two great empires and several outlying kingdoms into a centuries-long struggle. Will one of these empires emerge victorious, or will one of the many underdogs surrounding them repel their ambitions instead?#!" #NT!
+ bm_395_middle_east:0 "Дом Сасана" 
+ bm_395_middle_east_desc:1 "Веками римляне и иранцы боролись друг с другом за господство на Ближнем Востоке. Теперь Восточная Римская империя и Дом Сасанов снова вступают в противоречие из-за региона.\n\nСасаниды давно стремились восстановить былое могущество Персии при Ахеменидах и успешно подчинили себе такие народы, как лахмиды и армяне. Восточные римляне последовали их примеру, установив Танухидов и Джафнидов в качестве подчиненных государств, и теперь обратили свой взор на независимые царства Кавказских гор. Другой соперник в регионе, Аксумиты, надеются доминировать над Химьяром на противоположных берегах Красного моря.\n\n#bold Богатства Ближнего Востока привели к многовековой борьбе двух великих империй и нескольких отдаленных королевств. Выйдет ли одна из этих империй победителем или вместо этого один из многих аутсайдеров, окружающих их, оттолкнет их амбиции?#!" 
 
- # Sassanids #NT!
+ # Сасаниды 
 
- bookmark_middle_east_bahram:0 "Shahanshah Bahram IV" #NT!
- bookmark_middle_east_bahram_desc:0 "Bahram was Shahanshah of Ērān from 388 until his death in 399 AD. During his reign, a Hunnic invasion of Mesopotamia was repelled, mint signatures became more common during a period of economic reform, and the insubordinate Khosrow IV was deposed in favor of his brother, Vramshapuh, as client king of Armenia.\n\n#bold Like his father, Bahram would be murdered by members of the nobility in 399 AD and was succeeded by his brother, Yazdegerd I. His reign was largely uneventful, but what surprises will come your way and that of Ērān?" #NT!
- bookmark_middle_east_395_yazdegerd:0 "Yazdegerd" #NT!
+ bookmark_middle_east_bahram:0 "Шаханшах Бахрам IV" 
+ bookmark_middle_east_bahram_desc:0 "Бахрам был шаханшахом Эрана с 388 года до своей смерти в 399 году нашей эры. Во время его правления гуннское вторжение в Месопотамию было отражено, подписи монетного двора стали более распространенными в период экономических реформ, а непокорный Хосров IV был свергнут в пользу своего брата Врамшапуха как царя-клиента Армении.\n\n#bold Как и его отец, Бахрам был убит представителями знати в 399 г. н.э., и ему наследовал его брат Йездигерд I. Его правление прошло в основном без происшествий, но какие сюрпризы ждут вас и Эрана?" 
+ bookmark_middle_east_395_yazdegerd:0 "Йездигерд" 
 
- # Armenia #NT!
+ # Армения 
 
- bookmark_middle_east_vramshapuh:0 "King Vramshapuh I" #NT!
- bookmark_middle_east_vramshapuh_desc:0 "Vramshapuh I was the Sassanian client king of Armenia, ruling from his installment after his brother's deposition in 389 until his death in 414 AD. He is best remembered for presiding over Mesrop Mashtots' creation of the Armenian alphabet, thus ensuring the overall unity and survival of the Armenian culture and identity under Roman and Sassanian control.\n\n#bold With his role in the survival of his culture, what other feats will the Arsacid line accomplish amidst the Romano-Sassanian struggle?#!" #NT!
+ bookmark_middle_east_vramshapuh:0 "Король Врамшапух I" 
+ bookmark_middle_east_vramshapuh_desc:0 "Врамшапух I был сасанидским царем-клиентом Армении, правившим со своего поста после низложения своего брата в 389 году до своей смерти в 414 году нашей эры. Его лучше всего помнят за то, что он руководил созданием Месропом Маштоцем армянского алфавита, что обеспечило общее единство и выживание армянской культуры и идентичности под контролем римлян и сасанидов.\n\n#bold С его ролью в выживании своей культуры, какие еще подвиги совершит линия Аршакидов среди римско-сасанидской борьбы?#!" 
 
- # Axumites #NT!
+ # Аксумиты 
 
- bookmark_middle_east_ouazeba:0 "Negus Ouazebas I" #NT!
- bookmark_middle_east_ouazeba_desc:0 "Axum is on the ascendancy. A mere few decades ago, Ouazebas' predecessor, the great Ezana, converted to Christianity and wrought destruction on the once mighty Kingdom of Meroe, heir to the legacy of ancient Nubia stretching back millennia to Pharaonic times. Now that Axum is the new power on the African side of the Red Sea, the possibilities seem endless, and some Axumites even eye more ambituous conquests in south Arabia.\n\n#bold How will the Axumites cement their place in history as the foremost power of Africa?#!" #NT!
+ bookmark_middle_east_ouazeba:0 "Негус Уазебас I" 
+ bookmark_middle_east_ouazeba_desc:0 "Аксум на подъеме. Всего несколько десятилетий назад предшественник Уазебаса, великий Эзана, обратился в христианство и разрушил некогда могущественное королевство Мероэ, наследника наследия древней Нубии, уходящей корнями в глубь тысячелетий до времен фараонов. Теперь, когда Аксум стал новой державой на африканской стороне Красного моря, возможности кажутся безграничными, и некоторые аксумцы даже подумывают о более амбициозных завоеваниях в южной Аравии.\n\n#bold Как аксумцы укрепят свое место в истории как передовая держава Африки?#!" 
 
- # Himyar - possibly first Jewish ruler of Himyar #NT!
+ # Химьяр - возможно, первый еврейский правитель Химьяра. 
 
- bookmark_middle_east_aub_karib:0 "King Abu Karib I" #NT!
- bookmark_middle_east_aub_karib_desc:0 "Abu Karib was King of Himyar from 378 until his death in 430 AD. According to legend, he converted to the Jewish faith amidst a spree of military campaigns in Southern Arabia. However, his own soldiers killed him, tired of his continuous military endeavours.\n\n#bold Though many of its people are still pagan, Himyar is now one of the few independent polities ruled by a follower of Judaism. How will you grow the influence of the Himyarite Kingdom?#!" #NT!
+ bookmark_middle_east_aub_karib:0 "Король Абу Кариб I" 
+ bookmark_middle_east_aub_karib_desc:0 "Абу Кариб был королем Химьяра с 378 года до своей смерти в 430 году нашей эры. Согласно легенде, он обратился в иудейскую веру во время военных кампаний в Южной Аравии. Однако его убили собственные солдаты, уставшие от его непрерывных военных усилий.\n\n#bold Хотя многие из его жителей все еще язычники, Химьяр теперь является одним из немногих независимых государств, управляемых последователем иудаизма. Как вы будете увеличивать влияние химьяритского царства?#!" 
 
- # Tanukhids #NT!
+ # Танухиды 
 
- bookmark_middle_east_mawwiya:0 "Queen Mawwiya I" #NT!
- bookmark_middle_east_mawwiya_desc:0 "Mawwiya was Queen of the Tanukhids from 375 until her death in 425 AD, having bested the Romans in a rebellion and forcing them to sign a truce with her on #Italic her#! terms. However, another revolt in 383 AD was put down and the Tanukhids were continuously sidelined by their Roman benefactors in favor of the Gothic tribes migrating into the Balkans.\n\n#bold Later considered the most powerful woman in Arabia after the Palmyrene Queen, Zenobia, how will Mawwiya and her descendants ascend to new heights amidst the Romano-Sassanian struggle?#!" #NT!
- bookmark_middle_east_395_khasidat:0 "Khasidat" #NT!
+ bookmark_middle_east_mawwiya:0 "Королева Мавия I" 
+ bookmark_middle_east_mawwiya_desc:0 "Маввия была королевой Танухидов с 375 года до своей смерти в 425 году нашей эры, победив римлян в восстании и вынудив их подписать с ней перемирие на #Italic her#! условиях. Однако еще одно восстание в 383 году нашей эры было подавлено, и Танухиды постоянно оттеснялись на второй план своими римскими благодетелями в пользу готских племен, мигрирующих на Балканы.\n\n#bold Позже считавшаяся самой могущественной женщиной в Аравии после царицы Пальмиры, Зенобии, как Маввия и ее потомки поднимутся на новые высоты в условиях римско-сасанидской борьбы?#!" 
+ bookmark_middle_east_395_khasidat:0 "Хасидат" 
 
- # Lakhmids #NT!
+ # Лахмиды 
 
- bookmark_middle_east_al-numan:0 "King Al-Nu'man 'the One-Eyed'" #NT!
- bookmark_middle_east_al-numan_desc:0 "Al-Nu'man was King of the Lakhmids from 390 until his abdication in 418 AD. He was best known for the construction of two grand palaces at Khawarnaq and Sadir and for his sudden abdication in favor of an ascetic lifestyle, being succeeded by his son, al-Mundhir.\n\n#bold With the Lakhmids gradually rising as a major player in the Arabian peninsula, how will you guide this burgeoning realm?#!" #NT!
+ bookmark_middle_east_al-numan:0 "Король Аль-Нуман «Одноглазый»" 
+ bookmark_middle_east_al-numan_desc:0 "Аль-Ну'ман был королем Лахмидов с 390 года до своего отречения от престола в 418 году нашей эры. Он был наиболее известен строительством двух великих дворцов в Хаварнаке и Садире и своим внезапным отречением от престола в пользу аскетического образа жизни, которому наследовал его сын аль-Мунзир.\n\n#bold Поскольку Лахмиды постепенно становятся крупными игроками на Аравийском полуострове, как вы будете управлять этим растущим королевством?#!" 
 
- # Kidarites #NT!
+ # Кидариты 
 
- bookmark_middle_east_kidara:0 "Khan Kidara I" #NT!
- bookmark_middle_east_kidara_desc:0 "The Iranian Huns swept in from the steppes in the wake of the decline of the Kushans who once dominated the lands between Iran and India. The Huns are led by the Kidarites, a tribe ruled by the eponymous Kidara. Claiming to be the Kushans' successor, he has caused the Sassanids much trouble. However, after his death, other Iranian Hun tribes, particularly the Hephthalites and Alchonids, would forge their own destinies and surpass the Kidarites.\n\n#bold Can you combine the best of both the steppe peoples and the civilized city-dwellers, and herald a new era along the Silk Road?#!" #NT!
- bookmark_middle_east_395_hephthalites:0 "Akkhvan" #NT!
- bookmark_middle_east_395_alchonids:0 "Alakha" #NT!
+ bookmark_middle_east_kidara:0 "Хан Кидара I" 
+ bookmark_middle_east_kidara_desc:0 "Иранские гунны пришли из степей после упадка кушанов, которые когда-то господствовали на землях между Ираном и Индией. Гуннов возглавляют кидариты, племя, которым правит одноименный Кидара. Утверждая, что он преемник кушанов, он доставил много неприятностей Сасанидам. Однако после его смерти другие иранские гуннские племена, особенно эфталиты и алхониды, сложили свою судьбу и превзошли кидаритов.\n\n#bold Сможете ли вы объединить лучшее, что есть у степняков и цивилизованных горожан, и провозгласить новую эру на Шелковом пути?#!" 
+ bookmark_middle_east_395_hephthalites:0 "Акхван" 
+ bookmark_middle_east_395_alchonids:0 "Алаха" 
