--- a/localization/russian/ccu/ccu_heritage_family_l_russian.yml
+++ b/localization/russian/ccu/ccu_heritage_family_l_russian.yml
@@ -7,12 +7,12 @@
 # It should never be manually edited. #NT!
 ############################################# #NT!
 
-culture_parameter_heritage_family_african:0 "#P +[EmptyScope.ScriptValue('same_heritage_family_cultural_acceptance')|0]#! [cultural_acceptance_baseline|E] with Cultures sharing the African [heritage_family|E]" #NT!
-culture_parameter_heritage_family_american:0 "#P +[EmptyScope.ScriptValue('same_heritage_family_cultural_acceptance')|0]#! [cultural_acceptance_baseline|E] with Cultures sharing the American [heritage_family|E]" #NT!
-culture_parameter_heritage_family_east_asian:0 "#P +[EmptyScope.ScriptValue('same_heritage_family_cultural_acceptance')|0]#! [cultural_acceptance_baseline|E] with Cultures sharing the East Asian [heritage_family|E]" #NT!
-culture_parameter_heritage_family_mediterranean:0 "#P +[EmptyScope.ScriptValue('same_heritage_family_cultural_acceptance')|0]#! [cultural_acceptance_baseline|E] with Cultures sharing the Mediterranean [heritage_family|E]" #NT!
-culture_parameter_heritage_family_middle_eastern:0 "#P +[EmptyScope.ScriptValue('same_heritage_family_cultural_acceptance')|0]#! [cultural_acceptance_baseline|E] with Cultures sharing the Middle Eastern [heritage_family|E]" #NT!
-culture_parameter_heritage_family_northern:0 "#P +[EmptyScope.ScriptValue('same_heritage_family_cultural_acceptance')|0]#! [cultural_acceptance_baseline|E] with Cultures sharing the Northern [heritage_family|E]" #NT!
-culture_parameter_heritage_family_persian:0 "#P +[EmptyScope.ScriptValue('same_heritage_family_cultural_acceptance')|0]#! [cultural_acceptance_baseline|E] with Cultures sharing the Persian [heritage_family|E]" #NT!
-culture_parameter_heritage_family_south_asian:0 "#P +[EmptyScope.ScriptValue('same_heritage_family_cultural_acceptance')|0]#! [cultural_acceptance_baseline|E] with Cultures sharing the South Asian [heritage_family|E]" #NT!
-culture_parameter_heritage_family_steppe:0 "#P +[EmptyScope.ScriptValue('same_heritage_family_cultural_acceptance')|0]#! [cultural_acceptance_baseline|E] with Cultures sharing the Steppe [heritage_family|E]" #NT!
+culture_parameter_heritage_family_african:0 "#P +[EmptyScope.ScriptValue('same_heritage_family_cultural_acceptance')|0]#! [cultural_acceptance_baseline|E] с культурами, разделяющими Африканское [Concept( 'heritage_family', 'семейство наследия' )|E]"
+culture_parameter_heritage_family_american:0 "#P +[EmptyScope.ScriptValue('same_heritage_family_cultural_acceptance')|0]#! [cultural_acceptance_baseline|E] с культурами, разделяющими Американское [Concept( 'heritage_family', 'семейство наследия' )|E]"
+culture_parameter_heritage_family_east_asian:0 "#P +[EmptyScope.ScriptValue('same_heritage_family_cultural_acceptance')|0]#! [cultural_acceptance_baseline|E] с культурами, разделяющими Восточно-азиатское [Concept( 'heritage_family', 'семейство наследия' )|E]"
+culture_parameter_heritage_family_mediterranean:0 "#P +[EmptyScope.ScriptValue('same_heritage_family_cultural_acceptance')|0]#! [cultural_acceptance_baseline|E] с культурами, разделяющими Средиземноморское [Concept( 'heritage_family', 'семейство наследия' )|E]"
+culture_parameter_heritage_family_middle_eastern:0 "#P +[EmptyScope.ScriptValue('same_heritage_family_cultural_acceptance')|0]#! [cultural_acceptance_baseline|E] с культурами, разделяющими Ближневосточное [Concept( 'heritage_family', 'семейство наследия' )|E]"
+culture_parameter_heritage_family_northern:0 "#P +[EmptyScope.ScriptValue('same_heritage_family_cultural_acceptance')|0]#! [cultural_acceptance_baseline|E] с культурами, разделяющими Скандинавское [Concept( 'heritage_family', 'семейство наследия' )|E]"
+culture_parameter_heritage_family_persian:0 "#P +[EmptyScope.ScriptValue('same_heritage_family_cultural_acceptance')|0]#! [cultural_acceptance_baseline|E] с культурами, разделяющими Персидское [Concept( 'heritage_family', 'семейство наследия' )|E]"
+culture_parameter_heritage_family_south_asian:0 "#P +[EmptyScope.ScriptValue('same_heritage_family_cultural_acceptance')|0]#! [cultural_acceptance_baseline|E] с культурами, разделяющими Южноазитское [Concept( 'heritage_family', 'семейство наследия' )|E]"
+culture_parameter_heritage_family_steppe:0 "#P +[EmptyScope.ScriptValue('same_heritage_family_cultural_acceptance')|0]#! [cultural_acceptance_baseline|E] с культурами, разделяющими Степное [Concept( 'heritage_family', 'семейство наследия' )|E]"
