перевод модуля языков

--- a/localization/russian/ccu/ccu_script_value_breakdowns_l_russian.yml
+++ b/localization/russian/ccu/ccu_script_value_breakdowns_l_russian.yml
@@ -1,9 +1,9 @@
 ﻿l_russian:
 
-ACCEPTANCE_BASELINE_HERITAGE_GROUP:0 "[cultures|E] share the same [heritage_group|E]" #NT!
-ACCEPTANCE_BASELINE_HERITAGE_FAMILY:0 "[cultures|E] share the same [heritage_family|E]" #NT!
-ACCEPTANCE_BASELINE_LANGUAGE_GROUP:0 "[cultures|E] share the same [language_group|E]" #NT!
-ACCEPTANCE_BASELINE_LANGUAGE_FAMILY:0 "[cultures|E] share the same [language_family|E]" #NT!
+ACCEPTANCE_BASELINE_HERITAGE_GROUP:0 "[cultures|E] разделяют ту же [Concept( 'heritage_group', 'группу наследия' )|E]"
+ACCEPTANCE_BASELINE_HERITAGE_FAMILY:0 "[cultures|E] разделяют то же [Concept( 'heritage_family', 'семейство наследия' )|E]"
+ACCEPTANCE_BASELINE_LANGUAGE_GROUP:0 "[cultures|E] разделяют ту же [Concept( 'language_group', 'группу языков' )|E]"
+ACCEPTANCE_BASELINE_LANGUAGE_FAMILY:0 "[cultures|E] разделяют то же [Concept( 'language_family', 'семейство языков' )|E]"
 
-SCHEME_SAME_LANGUAGE_GROUP_AS_NATIVE_LANGUAGE:0 "Same [language_group|E] as your native [language|E]: $VALUE|+0=$" #NT!
-SCHEME_SAME_LANGUAGE_FAMILY_AS_NATIVE_LANGUAGE:0 "Same [language_family|E] as your native [language|E]: $VALUE|+0=$" #NT!
+SCHEME_SAME_LANGUAGE_GROUP_AS_NATIVE_LANGUAGE:0 "Та же [language_group|E] как и ваш родной [language|E]: $VALUE|+0=$"
+SCHEME_SAME_LANGUAGE_FAMILY_AS_NATIVE_LANGUAGE:0 "То же [language_family|E] как и ваш родной [language|E]: $VALUE|+0=$"
