Перевод двух строк

--- a/localization/russian/tfe_water_l_russian.yml
+++ b/localization/russian/tfe_water_l_russian.yml
@@ -1,3 +1,3 @@
 ﻿l_russian:
- sea_black_common:0 "Black Sea" #NT!
- sea_black_latin:0 "Pontus Euxinus" #NT!
+ sea_black_common:0 "Черное море"  
+ sea_black_latin:0 " Понту Эвксинский"  
