перевод мелких файлов в основной директории

--- a/localization/russian/TFE_mercs_l_russian.yml
+++ b/localization/russian/TFE_mercs_l_russian.yml
@@ -1,2 +1,2 @@
 ﻿l_russian:
- mercenary_company_true_chieftain_faithful:0 "The Faithful Chieftans" #NT!
+ mercenary_company_true_chieftain_faithful:0 "Верные вожди" #NT!
