--- a/localization/russian/TFE_regions_l_russian.yml
+++ b/localization/russian/TFE_regions_l_russian.yml
@@ -1,8 +1,8 @@
 ﻿l_russian:
- custom_council_chalcedonia_coptic:0 "Council of Chalcedonia - Coptic" #NT!
- custom_council_chalcedonia_nestorian:0 "Council of Chalcedonia - Nestorian" #NT!
- custom_council_chalcedonia_apostolic:0 "Council of Chalcedonia - Apostolic" #NT!
- custom_worms:0 "Kingdom of Worms" #NT!
- custom_caucasian_empire:0 "The Caucasus" #NT!
- region_assyria:0 "Assyrian Core Lands" #NT!
- region_assyria_greater:0 "Assyria" #NT!
+ custom_council_chalcedonia_coptic:0 "Халкидонский собор - Коптский" #NT!
+ custom_council_chalcedonia_nestorian:0 "Халкидонский собор - Несторианский" #NT!
+ custom_council_chalcedonia_apostolic:0 "Халкидонский собор - Апостольский" #NT!
+ custom_worms:0 "Королевство Червей" #NT!
+ custom_caucasian_empire:0 "Кавказ" #NT!
+ region_assyria:0 "Основные земли Ассирии" #NT!
+ region_assyria_greater:0 "Ассирия" #NT!
