--- a/localization/russian/tfe_misc_l_russian.yml
+++ b/localization/russian/tfe_misc_l_russian.yml
@@ -1,4 +1,4 @@
 ﻿l_russian:
  republican_government_levy_contribution_mult:0 "[republic|E] $MOD_VASSAL_LEVY_CONTRIBUTION_MULT$" #NT!
- pilgrimage_ethiopia_jerusalem_modifier:0 "Tesalami" #NT!
- #pejtt:0 "Because I'm an Ethiopian Christian who journeyed to Jerusalem, I gain extra piety" #NT!
+ pilgrimage_ethiopia_jerusalem_modifier:0 "Месаламин" #NT!
+ #pejtt:0 "Поскольку я эфиопский христианин, совершивший путешествие в Иерусалим, я приобретаю дополнительную набожность" #NT!
